# setup-environment-w3rqil

./: CMakeLists.txt  indice.txt
Desktop/SOII/: sonar-project.properties
Desktop/SOII/LAB0SETUP/: CMakeLists.txt
Desktop/SOII/LAB0SETUP/include/: greetings.h
Desktop/SOII/include/: logic.h
Desktop/SOII/lib/libdyn/: CMakeLists.txt
Desktop/SOII/lib/libsta/: CMakeLists.txt
Desktop/SOII/lib/libsta/include/: static.h
Desktop/SOII/src/: greetings.c  logic.c  main.c
Desktop/SOII/tests/: CMakeLists.txt
Desktop/SOII/tests/unit/: test_unit_program.c
include/: greetings.h
lib/libdyn/include/: shared.h
lib/libdyn/src/: shared.c
lib/libsta/: CMakeLists.txt
lib/libsta/src/: static.c
src/: greetings.c  logic.c  main.c
tests/: CMakeLists.txt
tests/unit/: test_unit_program.c
